--- a/resources/views/content/CreateUpdateAddress.twig
+++ b/resources/views/content/CreateUpdateAddress.twig
@@ -2,9 +2,16 @@
 
 <script type="x/template" id="vue-create-update-address">
     <form ref="addressForm" method="post" @submit.prevent>
-        <div>
-            <p>My Update Adress</p>
-        </div>
+        <address-input-group
+            template="#vue-address-input-group"
+            :address-type="addressType"
+            :modal-type="modalType"
+            :value="addressData"
+            @input="emitInputEvent($event)"
+            :optional-address-fields="optionalAddressFields"
+            :required-address-fields="requiredAddressFields"
+            :default-salutation="defaultSalutation">
+        </address-input-group>
         <button
             type="submit"
             class="btn btn-primary btn-appearance btn-block"
