--- a/resources/views/content/SalutationSelect.twig
+++ b/resources/views/content/SalutationSelect.twig
@@ -1,8 +1,10 @@
 <script type="x/template" id="vue-salutation-select">
-    <div  v-for="(salutation, index) in currentSalutation">
-        <input id="'saluation' + index" :selected="addressData.gender === salutation.key && checkGenderCompany(salutation.key)" :value="addressData.gender" type="radio" id="'saluation' +_uid" @change="emitInputEvent($event.target.value)" name="salutation">
-        <label for="'saluation' + index">
-             ${ salutation.name }
-        </label>
+    <div>
+        <div  v-for="(salutation, index) in currentSalutation">
+            <input id="'saluation' + index" :selected="addressData.gender === salutation.key && checkGenderCompany(salutation.key)" :value="addressData.gender" type="radio" @change="emitInputEvent($event.target.value)" name="salutation">
+            <label for="'saluation' + index">
+                ${ salutation.name }
+            </label>
+        </div>
     </div>
 </script>
