--- a/resources/views/content/SalutationSelect.twig
+++ b/resources/views/content/SalutationSelect.twig
@@ -1,7 +1,7 @@
 <script type="x/template" id="vue-salutation-select">
     <div>
         <div v-for="(salutation, index) in currentSalutation">
-            <input id="'saluation' + _uid" :selected="addressData.gender === salutation.key && checkGenderCompany(salutation.key)" :value="addressData.gender" type="radio" @change="emitInputEvent($event.target.value)" name="salutation">
+            <input :id="'saluation' + _uid" :selected="addressData.gender === salutation.key && checkGenderCompany(salutation.key)" :value="addressData.gender" type="radio" @change="emitInputEvent($event.target.value)" name="salutation">
             <label for="'saluation' + _uid">
                 ${ salutation.name }
             </label>
