change label for to dynmaic

--- a/resources/views/content/SalutationSelect.twig
+++ b/resources/views/content/SalutationSelect.twig
@@ -2,7 +2,7 @@
     <div>
         <div v-for="(salutation, index) in currentSalutation">
             <input :id="'saluation' + _uid" :selected="addressData.gender === salutation.key && checkGenderCompany(salutation.key)" :value="addressData.gender" type="radio" @change="emitInputEvent($event.target.value)" name="salutation">
-            <label for="'saluation' + _uid">
+            <label :for="'saluation' + _uid">
                 ${ salutation.name }
             </label>
         </div>
