--- a/resources/views/content/BillingAddressInputGroupDE.twig
+++ b/resources/views/content/BillingAddressInputGroupDE.twig
@@ -118,8 +118,13 @@
 <div class="col-12">
     <div class="row">
         <div class="col-12 col-sm-12">
-            <div class="input-unit" data-validate="text" data-model>
+            <div class="input-unit" data-validate="text" data-model="address1">
+                <input type="text" name="street" autocomplete="address-line1" :id="'street' + _uid" :value="value.address1" @input="emitInputEvent('address1', $event.target.value)">
+                <label :for="'street' + _uid">{{ trans("Ceres::Template.addressStreet") }}*</label>
+            </div>
         </div>
+    </div>
+    <div class="row">
         <div class="col-12 col-sm-8">
             <div class="input-unit" data-validate="text" data-model="address1">
                 <input type="text" name="street" autocomplete="address-line1" :id="'txtStreet' + _uid" :value="value.address1" @input="emitInputEvent('address1', $event.target.value)">
