added second address input lines

--- a/resources/views/content/AddressSelect.twig
+++ b/resources/views/content/AddressSelect.twig
@@ -1,6 +1,5 @@
 {{ component( "Ceres::Customer.Components.AddressSelect.CreateUpdateAddress") }}
-{{ component( "Ceres::Customer.Components.AddressSelect.AddressHeader") }}
-
+{{ component( "Ceres::Customer.Components.AddressSelect.AddressHeader") 
 
 <script type="x/template" id="vue-address-select">
     <div>
