--- a/resources/views/content/BillingAddressInputGroupDE.twig
+++ b/resources/views/content/BillingAddressInputGroupDE.twig
@@ -95,7 +95,8 @@
                 class="input-unit"
                 data-model="birthday"
                 v-validate:date="isInRequiredFields('de', 'billing_address.birthday') || !!value.birthday && !!value.birthday.length">
-                <input type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
+                <input v-if="edgeDesktop" type="text" id="datepicker" size="30" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)"></p>
+                <input v-else type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
                 <label :for="'txtBirthdate' + _uid">
                     ${ transformTranslation("Ceres::Template.addressBirthdate", "de", "billing_address.birthday") }
                 </label>
@@ -119,7 +120,7 @@
     <div class="row">
         <div class="col-12 col-sm-12">
             <div class="input-unit" data-validate="text" data-model="fullAddress">
-                <input type="text" name="street" autocomplete="address-line1 + ' ' + address-line2" :id="'txtStreet' + _uid" :value="value.fullAddress" @input="emitInputEvent('address1', $event.target.value)">
+                <input type="text" name="street" :id="'txtStreet' + _uid" :value="value.fullAddress" @input="emitInputEvent('address1', $event.target.value)">
                 <label :for="'txtStreet' + _uid">{{ trans("Ceres::Template.addressStreet") }}*</label>
             </div>
         </div>
