--- a/resources/views/content/BillingAddressInputGroupDE.twig
+++ b/resources/views/content/BillingAddressInputGroupDE.twig
@@ -95,8 +95,7 @@
                 class="input-unit"
                 data-model="birthday"
                 v-validate:date="isInRequiredFields('de', 'billing_address.birthday') || !!value.birthday && !!value.birthday.length">
-                <input v-if="edgeDesktop" type="text" id="datepicker" size="30" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)"></p>
-                <input v-else type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
+                <input type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
                 <label :for="'txtBirthdate' + _uid">
                     ${ transformTranslation("Ceres::Template.addressBirthdate", "de", "billing_address.birthday") }
                 </label>
