--- a/resources/views/content/BillingAddressInputGroupDE.twig
+++ b/resources/views/content/BillingAddressInputGroupDE.twig
@@ -90,17 +90,8 @@
             </div>
         </div>
     
-        <div v-if="isInOptionalFields('de', 'billing_address.birthday')" class="col-12 col-sm-4">
-            <div
-                class="input-unit"
-                data-model="birthday"
-                v-validate:date="isInRequiredFields('de', 'billing_address.birthday') || !!value.birthday && !!value.birthday.length">
-                <input type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
-                <label :for="'txtBirthdate' + _uid">
-                    ${ transformTranslation("Ceres::Template.addressBirthdate", "de", "billing_address.birthday") }
-                </label>
-            </div>
-        </div>
+        <date-picker></date-picker>
+        
         <div v-if="isInOptionalFields('de', 'billing_address.phoneNumber')" class="col-12 col-sm-4">
             <div
                 class="input-unit"
