--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -1,3 +1,5 @@
+{{ component( "Ceres::Customer.Components.SalutationSelect" ) }}
+
 <script type="x/template" id="vue-date-picker">
     <div
         class="input-unit"
