--- a/resources/views/content/BillingAddressInputGroupDE.twig
+++ b/resources/views/content/BillingAddressInputGroupDE.twig
@@ -1,4 +1,5 @@
 {{ component( "Ceres::Customer.Components.SalutationSelect" ) }}
+{{ component( "Ceres::Customer.Components.SalutationSelect" ) }}
 
 <div class="col-12">
     <div class="row">
