--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -1,17 +1,13 @@
-{{ component( "Ceres::Customer.Components.SalutationSelect" ) }}
 {{ component( "Ceres::Customer.Components.AddressInputGroup.AddressInputGroup" ) }}
 
 <script type="x/template" id="vue-date-picker">
-    <div
-        class="input-unit"
-        data-model="birthday"
-        v-validate:date="isInRequiredFields('de', 'billing_address.birthday') || !!value.birthday && !!value.birthday.length">
-        <input v-if="isEdgeDesktop" type="text" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
-        <input v-else type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
-        <label :for="'txtBirthdate' + _uid">
-            ${ transformTranslation("Ceres::Template.addressBirthdate", "de", "billing_address.birthday") }
-        </label>
-    </div>
+<div>
+    <input v-if="isEdgeDesktop" type="text" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
+    <input v-else type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
+    <label :for="'txtBirthdate' + _uid">
+        ${ transformTranslation("Ceres::Template.addressBirthdate", "de", "billing_address.birthday") }
+    </label>
+</div>
 </script>
 
 <script>
