--- a/resources/views/content/BillingAddressInputGroupDE.twig
+++ b/resources/views/content/BillingAddressInputGroupDE.twig
@@ -1,5 +1,4 @@
 {{ component( "Ceres::Customer.Components.SalutationSelect" ) }}
-{{ component( "Ceres::Customer.Components.SalutationSelect" ) }}
 
 <div class="col-12">
     <div class="row">
@@ -92,7 +91,11 @@
         </div>
 
         <div v-if="isInOptionalFields('de', 'billing_address.birthday')" class="col-12 col-sm-4">
-            <date-picker></date-picker>
+            <div class="input-unit"
+                data-model="name4"
+                v-validate:date="isInRequiredFields('de', 'billing_address.birthday') || !!value.birthday && !!value.birthday.length">
+                <date-picker></date-picker>
+            <div>
         </div>
 
         <div v-if="isInOptionalFields('de', 'billing_address.phoneNumber')" class="col-12 col-sm-4">
