--- a/resources/views/Components/AddressField.twig
+++ b/resources/views/Components/AddressField.twig
@@ -2,7 +2,20 @@
 
 
 <script type="x/template" id="vue-addressfield">
-    <div class="input-unit">
-        
+    <div class="col-12">
+        <div class="row">
+            <div class="col-12 col-sm-12">
+                <div class="input-unit" data-validate="text" data-model="address1">
+                    <input type="text" name="street" autocomplete="address-line1" :id="'txtStreet' + _uid" :value="value.address1" @input="emitInputEvent('address1', $event.target.value)">
+                    <label :for="'txtStreet' + _uid">{{ trans("Ceres::Template.addressStreet") }}*</label>
+                </div>
+            </div>
+        </div>
     </div>
+</script>
+
+<script>
+    Vue.component("vue-addressfield", {
+
+    })
 </script>
