--- a/resources/views/content/BillingAddressInputGroupDE.twig
+++ b/resources/views/content/BillingAddressInputGroupDE.twig
@@ -13,8 +13,8 @@
 <div class="col-12">
     <div class="row">
         <div
-            class="col-12 col-sm-6"
-            v-if="isInOptionalFields('de', 'billing_address.salutation') && value.gender === 'company' || isInOptionalFields('de', 'billing_address.name1') && !isInOptionalFields('de', 'billing_address.salutation')">
+                class="col-12 col-sm-6"
+                v-if="isInOptionalFields('de', 'billing_address.salutation') && value.gender === 'company' || isInOptionalFields('de', 'billing_address.name1') && !isInOptionalFields('de', 'billing_address.salutation')">
             <div class="input-unit" data-validate="text" data-model="name1">
                 <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
                 <label :for="'txtCompany' + _uid">{{ trans("Ceres::Template.addressCompany") }}*</label>
@@ -22,12 +22,13 @@
         </div>
 
         <div
-            class="col-12 col-sm-6"
-            v-if="(isInOptionalFields('de', 'billing_address.salutation') && value.gender === 'company') || isInOptionalFields('de', 'billing_address.vatNumber')">
+                class="col-12 col-sm-6"
+                v-if="(isInOptionalFields('de', 'billing_address.salutation') && value.gender === 'company' &&  isInOptionalFields('de', 'billing_address.vatNumber')) ||
+            (!isInOptionalFields('de', 'billing_address.salutation') && isInOptionalFields('de', 'billing_address.name1') && isInOptionalFields('de', 'billing_address.vatNumber'))">
             <div
-                class="input-unit"
-                data-model="vatNumber"
-                v-validate:text="isInRequiredFields('de', 'billing_address.vatNumber')">
+                    class="input-unit"
+                    data-model="vatNumber"
+                    v-validate:text="isInRequiredFields('de', 'billing_address.vatNumber')">
                 <input type="text" name="vatNumber" :id="'txtVatNumber' + _uid" :value="value.vatNumber"  @input="emitInputEvent('vatNumber', $event.target.value)" data-autofocus>
                 <label :for="'txtVatNumber' + _uid">
                     ${ transformTranslation("Ceres::Template.addressVatNumber", "de", "billing_address.vatNumber") }
@@ -41,9 +42,9 @@
     <div class="row">
         <div v-if="isInOptionalFields('de', 'billing_address.title')" class="col-12 col-sm-4">
             <div
-                class="input-unit"
-                data-model="title"
-                v-validate:text="isInRequiredFields('de', 'billing_address.title')">
+                    class="input-unit"
+                    data-model="title"
+                    v-validate:text="isInRequiredFields('de', 'billing_address.title')">
                 <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title"  @input="emitInputEvent('title', $event.target.value)" data-autofocus>
                 <label :for="'txtTitle' + _uid">
                     ${ transformTranslation("Ceres::Template.addressTitle", "de", "billing_address.title") }
@@ -68,9 +69,9 @@
 
         <div v-else class="col-xs-12 col-sm-8">
             <div
-                class="input-unit"
-                data-model="contactPerson"
-                v-validate:text="isInRequiredFields('de', 'billing_address.contactPerson')">
+                    class="input-unit"
+                    data-model="contactPerson"
+                    v-validate:text="isInRequiredFields('de', 'billing_address.contactPerson')">
                 <input type="text" name="lastName" :id="'txtContactPerson' + _uid" :value="value.contactPerson" @input="emitInputEvent('contactPerson', $event.target.value)">
                 <label :for="'txtContactPerson' + _uid">
                     ${ transformTranslation("Ceres::Template.addressContactPerson", "de", "billing_address.contactPerson") }
@@ -80,29 +81,27 @@
 
         <div v-if="isInOptionalFields('de', 'billing_address.name4')" class="col-12 col-sm-4">
             <div
-                class="input-unit"
-                data-model="name4"
-                v-validate:text="isInRequiredFields('de', 'billing_address.name4')">
+                    class="input-unit"
+                    data-model="name4"
+                    v-validate:text="isInRequiredFields('de', 'billing_address.name4')">
                 <input type="text" name="decorateName" :id="'txtAdditionalName' + _uid" :value="value.name4" @input="emitInputEvent('name4', $event.target.value)">
                 <label :for="'txtAdditionalName' + _uid">
                     ${ transformTranslation("Ceres::Template.addressAdditionalName", "de", "billing_address.name4") }
                 </label>
             </div>
         </div>
-
         <div v-if="isInOptionalFields('de', 'billing_address.birthday')" class="col-12 col-sm-4">
             <div class="input-unit"
-                data-model="name4"
-                v-validate:date="isInRequiredFields('de', 'billing_address.birthday') || !!value.birthday && !!value.birthday.length">
+                 data-model="name4"
+                 v-validate:date="isInRequiredFields('de', 'billing_address.birthday') || !!value.birthday && !!value.birthday.length">
                 <date-picker></date-picker>
             <div>
         </div>
-
         <div v-if="isInOptionalFields('de', 'billing_address.phoneNumber')" class="col-12 col-sm-4">
             <div
-                class="input-unit"
-                data-model="telephone"
-                v-validate:text="isInRequiredFields('de', 'billing_address.phoneNumber')">
+                    class="input-unit"
+                    data-model="telephone"
+                    v-validate:text="isInRequiredFields('de', 'billing_address.phoneNumber')">
                 <input type="text" name="telephone" :id="'txtTelephone' + _uid" :value="value.telephone" @input="emitInputEvent('telephone', $event.target.value)">
                 <label :for="'txtTelephone' + _uid">
                     ${ transformTranslation("Ceres::Template.addressTelephone", "de", "billing_address.phoneNumber") }
@@ -114,10 +113,17 @@
 
 <div class="col-12">
     <div class="row">
-        <div class="col-12 col-sm-12">
+        <div class="col-12 col-sm-8">
             <div class="input-unit" data-validate="text" data-model="address1">
                 <input type="text" name="street" autocomplete="address-line1" :id="'txtStreet' + _uid" :value="value.address1" @input="emitInputEvent('address1', $event.target.value)">
                 <label :for="'txtStreet' + _uid">{{ trans("Ceres::Template.addressStreet") }}*</label>
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-4">
+            <div class="input-unit" data-validate="text" data-model="address2">
+                <input type="text" name="housenumber" autocomplete="address-line2" :id="'txtNumber' + _uid" :value="value.address2" @input="emitInputEvent('address2', $event.target.value)">
+                <label :for="'txtNumber' + _uid">{{ trans("Ceres::Template.addressNumber") }}*</label>
             </div>
         </div>
     </div>
@@ -127,9 +133,9 @@
     <div class="row">
         <div v-if="isInOptionalFields('de', 'billing_address.address3')" class="col-12 col-sm-6">
             <div
-                class="input-unit"
-                data-model="address3"
-                v-validate:text="isInRequiredFields('de', 'billing_address.address3')">
+                    class="input-unit"
+                    data-model="address3"
+                    v-validate:text="isInRequiredFields('de', 'billing_address.address3')">
                 <input type="text" name="decorateAddress" :id="'decorateAddress0' + _uid" :value="value.address3" @input="emitInputEvent('address3', $event.target.value)">
                 <label :for="'decorateAddress0' + _uid">
                     ${ transformTranslation("Ceres::Template.addressAdditionalAddress1", "de", "billing_address.address3") }
@@ -139,9 +145,9 @@
 
         <div v-if="isInOptionalFields('de', 'billing_address.address4')" class="col-12 col-sm-6">
             <div
-                class="input-unit"
-                data-model="address4"
-                v-validate:text="isInRequiredFields('de', 'billing_address.address4')">
+                    class="input-unit"
+                    data-model="address4"
+                    v-validate:text="isInRequiredFields('de', 'billing_address.address4')">
                 <input type="text" name="decorateAddress" :id="'decorateAddress1' + _uid" :value="value.address4" @input="emitInputEvent('address4', $event.target.value)">
                 <label :for="'decorateAddress1' + _uid">
                     ${ transformTranslation("Ceres::Template.addressAdditionalAddress2", "de", "billing_address.address4") }
