fixed not enclosed div

--- a/resources/views/Components/AddressField.twig
+++ b/resources/views/Components/AddressField.twig
@@ -16,6 +16,13 @@
 
 <script>
     Vue.component("vue-addressfield", {
+        computed: {
+            address1() {
 
+            }
+            address2() {
+
+            }
+        }
     })
 </script>
