--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -14,6 +14,9 @@
     Vue.component("date-picker", {
         template: "#vue-date-picker",
         delimiters: ["${", "}"],
+        props: [
+            'value'
+        ],
         computed: {
             isEdgeDesktop() {
                 var isEdge = window.navigator.userAgent.indexOf("Edge/") > -1;
