--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -1,13 +1,13 @@
 {{ component( "Ceres::Customer.Components.AddressInputGroup.AddressInputGroup" ) }}
 
 <script type="x/template" id="vue-date-picker">
-<div>
-    <input v-if="isEdgeDesktop" type="text" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
-    <input v-else type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
-    <label :for="'txtBirthdate' + _uid">
-        ${ transformTranslation("Ceres::Template.addressBirthdate", "de", "billing_address.birthday") }
-    </label>
-</div>
+    <div>
+        <input v-if="isEdgeDesktop" type="text" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
+        <input v-else type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="birthday" @input="emitInputEvent('birthday', $event.target.value)">
+        <label :for="'txtBirthdate' + _uid">
+            ${ transformTranslation("Ceres::Template.addressBirthdate", "de", "billing_address.birthday") }
+        </label>
+    </div>
 </script>
 
 <script>
@@ -15,7 +15,7 @@
         template: "#vue-date-picker",
         delimiters: ["${", "}"],
         props: [
-            'value'
+            'birthday'
         ],
         computed: {
             isEdgeDesktop() {
