--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -5,7 +5,7 @@
         <input v-if="isEdgeDesktop" type="text" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
         <input v-else type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="birthday" @input="emitInputEvent('birthday', $event.target.value)">
         <label :for="'txtBirthdate' + _uid">
-            ${ transformTranslation("Ceres::Template.addressBirthdate", "de", "billing_address.birthday") }
+            Geburtsdatum
         </label>
     </div>
 </script>
@@ -25,13 +25,5 @@
                 return isEdge && !isTouch;
             }
         },
-        methods: {
-            transformTranslation(translationKey, locale, addressKey)
-            {
-                const translation = this.$translate(translationKey);
-                const isRequired = this.isInRequiredFields(locale, addressKey);
-                return translation + (isRequired ? "*" : "");
-            },
-        }
     });
 </script>
