--- a/resources/views/Components/AddressField.twig
+++ b/resources/views/Components/AddressField.twig
@@ -4,8 +4,8 @@
     <div class="col-12">
         <div class="row">
             <div class="col-12 col-sm-12">
-                <div class="input-unit" data-validate="text" data-model="address1">
-                    <input type="text" name="street" autocomplete="address-line1" :id="'txtStreet' + _uid" :value="value.address1" @input="emitInputEvent('address1', $event.target.value)">
+                <div class="input-unit" data-validate="text" data-model="fullAddress">
+                    <input type="text" name="fullAddress" autocomplete="full-address-line" :id="'fullAddress' + _uid" :value="value.fullAddress" @input="emitInputEvent('address1', $event.target.value)">
                     <label :for="'txtStreet' + _uid">{{ trans("Ceres::Template.addressStreet") }}*</label>
                 </div>
             </div>
