--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -4,8 +4,11 @@
     <div>
         <input v-if="isEdgeDesktop" type="text" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
         <input v-else type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="birthday" @input="emitInputEvent('birthday', $event.target.value)">
-        <label :for="'txtBirthdate' + _uid">
-            Geburtsdatum
+        <label v-if="isMandatory" :for="'txtBirthdate' + _uid">
+            Geburtstag*
+        </label>
+        <label v-else :for="'txtBirthdate' + _uid">
+            Geburtstag
         </label>
     </div>
 </script>
@@ -16,7 +19,7 @@
         delimiters: ["${", "}"],
         props: [
             'birthday',
-            ''
+            'isMandatory'
         ],
         computed: {
             isEdgeDesktop() {
