added v-model to Datepicker"

--- a/resources/views/Components/AddressField.twig
+++ b/resources/views/Components/AddressField.twig
@@ -24,10 +24,10 @@
         }
         computed: {
             address1() {
-                return 
+                return fullAddress.split(" ")[0]
             },
             address2() {
-
+                return fullAddress.split(" ")[1]
             }
         }
     })
