change datepicker to use emitInputEvent

--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -3,14 +3,16 @@
 <script type="x/template" id="vue-date-picker">
     <div>
         <input v-if="isEdgeDesktop" type="text" name="birthday2" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" 
-            :value="value" 
-            :id="'txtBirthdate' + _uid" 
-            @input="$emit('input', $event.target.value)">
+            :id="'txtBirthdate' + _uid"
+            :value="value.birthday"
+            @input="emitInputEvent('birthday', $event.target.value)"
+        >
         <input v-else type="date" name="birthday2" min="1901-12-14" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}"
-             :value="value" 
             :max="new Date().toISOString().split('T')[0]"  
-            :id="'txtBirthdate' + _uid" 
-            @input="$emit('input', $event.target.value)">
+            :id="'txtBirthdate' + _uid"
+            :value="value.birthday"
+            @input="emitInputEvent('birthday', $event.target.value)"
+        >
         <label :for="'txtBirthdate' + _uid">
             Geburtstag
         </label>
