added addressfield to BillingAddressGroup

--- a/resources/views/Components/AddressField.twig
+++ b/resources/views/Components/AddressField.twig
@@ -14,7 +14,7 @@
 </script>
 
 <script>
-    Vue.component("addressfield", {
+    Vue.component("address-field", {
         template: "#vue-address-field",
         delimiters: ["${", "}"],
         data: function() {
