added @input to datepicker

--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -1,4 +1,5 @@
 {{ component( "Ceres::Customer.Components.AddressInputGroup.AddressInputGroup" ) }}
+{{ component( "Ceres::Customer.Components.SalutationSelect" ) }}
 
 <script type="x/template" id="vue-date-picker">
     <div>
