added emitInputEvent to datepciker

--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -5,12 +5,14 @@
     <div>
         <input v-if="isEdgeDesktop" type="text" name="birthday2" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" 
             :id="'txtBirthdate' + _uid"
-            @change="emitInputEvent($event.target.value)"
+            :value="value.birthday" 
+            @input="emitInputEvent('birthday', $event.target.value)"
         >
         <input v-else type="date" name="birthday2" min="1901-12-14" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}"
             :max="new Date().toISOString().split('T')[0]"  
             :id="'txtBirthdate' + _uid"
-            @change="emitInputEvent($event.target.value)"
+            :value="value.birthday" 
+            @input="emitInputEvent('birthday', $event.target.value)"
         >
         <label :for="'txtBirthdate' + _uid">
             Geburtstag
@@ -32,5 +34,10 @@
                 return isEdge && !isTouch;
             }
         },
+        methods: {
+            emitInputEvent() {
+                this.$emit("input", { field: "birthday", value: value });
+            }
+        }
     });
 </script>
