removed value and input

--- a/resources/views/Components/AddressField.twig
+++ b/resources/views/Components/AddressField.twig
@@ -19,7 +19,7 @@
         delimiters: ["${", "}"],
         data: function() {
             return {
-                fullAddress: ""
+                fullAddress: String
             }
         },
         computed: {
