--- a/resources/views/content/BillingAddressInputGroupDE.twig
+++ b/resources/views/content/BillingAddressInputGroupDE.twig
@@ -94,7 +94,7 @@
             <div class="input-unit"
                 data-model="birthday"
                 v-validate:date="isInRequiredFields('de', 'billing_address.birthday') || !!value.birthday && !!value.birthday.length">
-                <date-picker data-model="birthday" :value="value.birthday" @input="emitInputEvent($event.field, $event.value)"></date-picker>
+                <date-picker data-model="birthday" @input="emitInputEvent($event.field, $event.value)"></date-picker>
             </div>
         </div>
         <div v-if="isInOptionalFields('de', 'billing_address.phoneNumber')" class="col-12 col-sm-4">
