added change event handler to input

--- a/resources/views/content/BillingAddressInputGroupDE.twig
+++ b/resources/views/content/BillingAddressInputGroupDE.twig
@@ -91,10 +91,10 @@
             </div>
         </div>
         <div v-if="isInOptionalFields('de', 'billing_address.birthday')" class="col-12 col-sm-4">
-            <div class="input-unit"
-                data-model="birthday"
+            <div
+                class="input-unit"
                 v-validate:date="isInRequiredFields('de', 'billing_address.birthday') || !!value.birthday && !!value.birthday.length">
-                <date-picker data-model="birthday" @input="emitInputEvent($event.field, $event.value)"></date-picker>
+                <date-picker @input="emitInputEvent($event.field, $event.value)"></date-picker>
             </div>
         </div>
         <div v-if="isInOptionalFields('de', 'billing_address.phoneNumber')" class="col-12 col-sm-4">
