refactored address field

--- a/resources/views/content/BillingAddressInputGroupDE.twig
+++ b/resources/views/content/BillingAddressInputGroupDE.twig
@@ -112,7 +112,12 @@
 </div>
 
 <div class="col-12">
-    <address-field></address-field>
+    <div class="row">
+        <div class="col-12 col-sm-8">
+            <address-field></address-field>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-12 col-sm-8">
             <div class="input-unit" data-validate="text" data-model="address1">
