--- a/resources/views/Components/AddressField.twig
+++ b/resources/views/Components/AddressField.twig
@@ -1,15 +1,9 @@
 {{ component( "Ceres::Customer.Components.SalutationSelect" ) }}
 
 <script type="x/template" id="vue-address-field">
-    <div class="col-12">
-        <div class="row">
-            <div class="col-12 col-sm-12">
-                <div class="input-unit" data-validate="text">
-                    <input type="text" name="fullAddress" autocomplete="full-address-line" :id="'fullAddress' + _uid" :value="value.fullAddress" @input="emitAddressEvent('fullAddress', $event.target.value)">
-                    <label :for="'txtStreet' + _uid">{{ trans("Ceres::Template.addressStreet") }}*</label>
-                </div>
-            </div>
-        </div>
+    <div class="input-unit" data-validate="text" data-model="fullAddress">
+        <input type="text" name="fullAddress" autocomplete="full-address-line" :id="'fullAddress' + _uid" :value="value.fullAddress" @input="emitAddressEvent('fullAddress', $event.target.value)">
+        <label :for="'txtStreet' + _uid">{{ trans("Ceres::Template.addressStreet") }}*</label>
     </div>
 </script>
 
