should emit birthday now

--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -32,7 +32,7 @@
             }
         },
         methods: {
-            emitInputEvent() {
+            emitInputEvent(value) {
                 this.$emit("input", { field: "birthday", value: value });
             }
         }
