removed fulladdress from emit input

--- a/resources/views/Components/Datepicker.twig
+++ b/resources/views/Components/Datepicker.twig
@@ -21,7 +21,7 @@
 
 <script>
     Vue.component("date-picker", {
-        template: "#vue-date-picker",
+        template: "#vue-date-picker",Ve
         delimiters: ["${", "}"],
         computed: {
             isEdgeDesktop() {
