--- a/resources/views/content/BillingAddressInputGroupDE.twig
+++ b/resources/views/content/BillingAddressInputGroupDE.twig
@@ -114,7 +114,7 @@
 <div class="col-12">
     <div class="row">
         <div class="col-12 col-sm-12">
-            <address-field></address-field>
+            <address-field @input="emitInputEvent($event.field, $event.value)"></address-field>
         </div>
     </div>
 </div>
