fixed streetName and streetNumber returned a array instead of a string

--- a/resources/views/Components/AddressField.twig
+++ b/resources/views/Components/AddressField.twig
@@ -24,11 +24,11 @@
                 // naive implementation
                 // return this.fullAddress.split(" ")[0]
                 var address = this.splittedAddress
-                return address.slice(0, address.length - 1)
+                return address.slice(0, address.length - 1).join(' ')
             },
             streetNumber() {
                 var address = this.splittedAddress
-                return address.slice(address.length - 1)
+                return address.slice(address.length - 1).join()
             }
         },
         methods: {
